{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 88,
  "lineage": "7d56bc15-64e2-2921-5f9a-d24ac64a6d92",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061d7db523e772de1",
            "arn": "arn:aws:ec2:us-east-1:983101357532:elastic-ip/eipalloc-061d7db523e772de1",
            "association_id": "eipassoc-0316cd9b8418e7171",
            "domain": "vpc",
            "id": "eipalloc-061d7db523e772de1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0208e1bd906503c51",
            "private_dns": "ip-172-31-11-104.ec2.internal",
            "private_ip": "172.31.11.104",
            "public_dns": "ec2-3-209-227-244.compute-1.amazonaws.com",
            "public_ip": "3.209.227.244",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "t1-backend-nat-eip"
            },
            "tags_all": {
              "Name": "t1-backend-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061d7db523e772de1",
            "association_id": "eipassoc-0316cd9b8418e7171",
            "connectivity_type": "public",
            "id": "nat-024fd921c51567ad4",
            "network_interface_id": "eni-0208e1bd906503c51",
            "private_ip": "172.31.11.104",
            "public_ip": "3.209.227.244",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-003c9aa0308f04abe",
            "tags": {
              "Name": "t1-backend-nat"
            },
            "tags_all": {
              "Name": "t1-backend-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:983101357532:route-table/rtb-0b1aed1a9bdc93bce",
            "id": "rtb-0b1aed1a9bdc93bce",
            "owner_id": "983101357532",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-024fd921c51567ad4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "t1-backend-private-rt"
            },
            "tags_all": {
              "Name": "t1-backend-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b575bf0e526b1133"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "983101357532",
            "id": "rtb-0b1aed1a9bdc93bce",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017286f861896ce01",
            "region": "us-east-1",
            "route_table_id": "rtb-0b1aed1a9bdc93bce",
            "subnet_id": "subnet-05f9c9b5b67e0964b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3cd3bdf9680a7f8",
            "region": "us-east-1",
            "route_table_id": "rtb-0b1aed1a9bdc93bce",
            "subnet_id": "subnet-05916f3d0bf244dc5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:983101357532:security-group/sg-00895451f7eec6ace",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00895451f7eec6ace",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From Lambda",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03119029e1eba28f5"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "t1-backend-db-sg",
            "name_prefix": "",
            "owner_id": "983101357532",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b575bf0e526b1133"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "983101357532",
            "id": "sg-00895451f7eec6ace",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lambda_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:983101357532:security-group/sg-03119029e1eba28f5",
            "description": "Security group for Lambda to reach RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03119029e1eba28f5",
            "ingress": [],
            "name": "t1-backend-lambda-sg",
            "name_prefix": "",
            "owner_id": "983101357532",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "t1-backend-lambda-sg"
            },
            "tags_all": {
              "Name": "t1-backend-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b575bf0e526b1133"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "983101357532",
            "id": "sg-03119029e1eba28f5",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:983101357532:subnet/subnet-05f9c9b5b67e0964b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f9c9b5b67e0964b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983101357532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "t1-backend-private-a"
            },
            "tags_all": {
              "Name": "t1-backend-private-a"
            },
            "vpc_id": "vpc-0b575bf0e526b1133"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "983101357532",
            "id": "subnet-05f9c9b5b67e0964b",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:983101357532:subnet/subnet-05916f3d0bf244dc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05916f3d0bf244dc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983101357532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "t1-backend-private-b"
            },
            "tags_all": {
              "Name": "t1-backend-private-b"
            },
            "vpc_id": "vpc-0b575bf0e526b1133"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "983101357532",
            "id": "subnet-05916f3d0bf244dc5",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}